--- a/.env
+++ b/.env
@@ -1,2 +1,20 @@
+###---Pobieranie pliku .csv
 USER_NAME = ksiwak
 PASSWORD = essa
+
+###---Wysyłka email
+RECEIVE_EMAIL = mail
+MAIL_USER = mail
+MAIL_PASS = pass
+MAIL_HOST = mail_host
+### MAIL_IS_SECURE = true, połączenie będzie używać TLS podczas łączenia się z serwerem. 
+### MAIL_IS_SECURE = false (wartość domyślna), używany jest protokół TLS, jeśli serwer obsługuje rozszerzenie STARTTLS. 
+### W większości przypadków jeżeli wykorzystywany jest prot 465 to MAIL_IS_SECURE = true. W przypadku portu 587 lub 25 wartość powinna być false.
+MAIL_PORT = 465
+MAIL_IS_SECURE = true
+
+###---Połączenie do bazy danych
+DATABASE_USER = root
+DATABASE_PASS = pass
+DATABASE_HOST = dbhost
+DATABASE_NAME = dbname
